--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
-version: "3"
+version: '3'
 
 services:
   nuxt:
-    build: './docker/nuxt'
+    build: '.'
     restart: 'always'
     volumes:
       - '.:/nuxt'
